--- a/style/style.css
+++ b/style/style.css
@@ -177,7 +177,7 @@ body{
 }
 .img_encuentro img{
     width: 100%;
-    height: 800px;
+    height: 700px;
 }
 /***************************************Section categoria**************************************/
 .section__categoria {
@@ -206,19 +206,18 @@ body{
 }
 
 .categoria__img:nth-child(1) .categoria__img__img {
-    background-image: url("/img/scaloneta/copa-america-conmebol.webp");
+    background-image: url(img/scaloneta/copa-america-conmebol.web);
     background-position: center;
     background-size: cover;
 }
-
 .categoria__img:nth-child(2) .categoria__img__img {
-    background-image: url("/img/scaloneta/finalissima.webp");
+    background-image: url(img/scaloneta/finalissima.web);
     background-position: center;
     background-size: cover;
 }
 
 .categoria__img:nth-child(3) .categoria__img__img {
-    background-image: url("/img/scaloneta/qatar-2022.jpg");
+    background-image: url(img/scaloneta/qatar-2022);
     background-position: center;
     background-size: cover;
 
