ultima modificación, si todo funciona bien

--- a/style/style.css
+++ b/style/style.css
@@ -204,23 +204,13 @@ body{
     grid-template-rows: 1fr;
     margin: 0 auto;  
 }
-
-.categoria__img:nth-child(1) .categoria__img__img {
-    background-image: url("img/scaloneta/copa-america-conmebol.webp");
-    background-position: center;
-    background-size: cover;
+.categoria__img__img{
+    margin-bottom: 30px;
 }
-.categoria__img:nth-child(2) .categoria__img__img {
-    background-image: url("img/scaloneta/finalissima.webp");
-    background-position: center;
-    background-size: cover;
-}
-
-.categoria__img:nth-child(3) .categoria__img__img {
-    background-image: url("img/scaloneta/qatar-2022.jpg");
-    background-position: center;
-    background-size: cover;
-
+.categoria__img__img img{
+    width: 300px;
+    height: 300px;
+    
 }
 
 .categoria__img h4 {
