por favor que sea la ultima

--- a/style/style.css
+++ b/style/style.css
@@ -365,7 +365,7 @@ body{
     display: flex;
     width: 100%;
     height: 650px;
-    background-image: url(/img/scaloneta/portada_fixture.webp);
+    background-image: url("../img/scaloneta/portada_fixture.webp");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
