--- a/style/style.css
+++ b/style/style.css
@@ -111,13 +111,11 @@ body{
     align-items: center;
     text-decoration: none;
     color: black;
-}
-.noticia_principal{
-    margin: 0 auto;
+     margin: 0 auto;
     width: 1500px;
     border-bottom: solid 1px rgba(0,0,0,0.5);
-
 }
+
 .noticia_principal img{
     width: 350px;
 }
@@ -159,25 +157,30 @@ body{
     color: black;
     border: 1px solid ;
 }
+.dibu_martinez{
+    background-color: black;
+}
+.dibu_martinez .noticia__text{
+    color: whitesmoke;
+}
+.dibu_martinez .noticia__text h3{
+    color: whitesmoke;
+}
+.dibu_martinez .noticia__text input{
+    background-color: whitesmoke;
+    color: black;
+}
+.dibu_martinez .noticia__text input:hover{
+    border: 1px solid whitesmoke;
+    color: whitesmoke;
+    background-color: black;
+}
 
 /*****Proximo encuentros*/
 
-.proximos_encuentro h2{
-    font-family: var(--text-principal);
-    letter-spacing: 1.5px;
-    margin: 20px 10px;
-    text-align: center;
-}
-.proximos_encuentro h2 span{
-    font-family: var(--text-secundario);
-    margin-left: 10px;
-}
-.img_encuentro{
-    border: solid;
-}
 .img_encuentro img{
     width: 100%;
-    height: 700px;
+    height: 800px;
 }
 /***************************************Section categoria**************************************/
 .section__categoria {
@@ -206,10 +209,13 @@ body{
 }
 .categoria__img__img{
     margin-bottom: 30px;
+    width: 400px;
+    height: 400px;
+    margin-right: 20px ;
 }
 .categoria__img__img img{
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
     
 }
 
@@ -222,10 +228,7 @@ body{
 }
 
 
-.contenedor__categoria a {
-    text-decoration: none;
-    color: black;
-}
+
 /*Formulario*/
 .formulario {
     border-top: solid 1px;
