--- a/style/style.css
+++ b/style/style.css
@@ -45,6 +45,8 @@ body{
     margin: 0 40px;
     color: black;
     letter-spacing: 1.5px;
+    border-radius: 6px;
+    transition: background-color 1s;
 }
 
 .header__navegacion__ul a:hover {
@@ -367,11 +369,11 @@ body{
 .portada__fixture__img{
     display: flex;
     width: 100%;
-    height: 650px;
-    background-image: url(../img/scaloneta/portada_fixture.webp);
+    height: 790px;
+    background-image: url(../img/scaloneta/img_banners/img-3.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: top;
 }
 .argentina{
     width: 50%;
@@ -538,7 +540,7 @@ body{
     width: 70vw;
     display: grid;
     justify-content: space-around;
-    grid-template-columns: repeat(3, 200px);
+    grid-template-columns: repeat(3, 300px);
     grid-template-rows: auto;
     margin: 0 auto;
     border-bottom: 1px solid whitesmoke;
@@ -571,8 +573,8 @@ margin: 0;
     margin: 40px 0;
 }
 .card_miEstilo img{
-    width: 200px;
-    height: 310px;
+    width: 300px;
+   height: 500px;
     margin: 0;
     
 }
@@ -582,7 +584,7 @@ margin: 0;
     display: grid;
     justify-content: space-around;
     width: 70vw;
-    grid-template-columns: repeat(3, 200px);
+    grid-template-columns: repeat(3, 300px);
     grid-template-rows: repeat(3, auto);
     border-bottom: 1px solid whitesmoke;
 }
