sumando sass a page plantel

--- a/scss/_fixture.scss
+++ b/scss/_fixture.scss
@@ -101,7 +101,7 @@ main{
                     color: gray;
                     font-weight: bold;
                 }
-                &:hover{
+                &:hover td{
                     background-color: $fondo;
                     color: whitesmoke;
                 }
