--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -216,7 +216,7 @@ footer{
     justify-content: space-around;
     align-items: center;
     height: 250px;
-    background-color:  $fondo;
+    background-color:  black;
     color: whitesmoke;
     h3{
         font-family:$texto_principal;
