--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -25,8 +25,9 @@ $fondo: #023e8a;
         font-family: $texto_secundario;
     }
 }
-.contenedor_card{
-    width:70%;
+
+.contenedor_card {
+    width: 70%;
     display: grid;
     justify-content: space-around;
     grid-template-columns: repeat(3, 300px);
@@ -34,11 +35,19 @@ $fondo: #023e8a;
     gap: 1rem;
     margin: 0 auto;
     border-bottom: 1px solid whitesmoke;
-    .card_miEstilo{
-        margin-bottom:20px;
+
+    .card_miEstilo {
+        margin-bottom: 20px;
     }
-    .card_miEstilo img{
+
+    .card_miEstilo img {
         height: 500px;
     }
 }
 
+.contenedor_form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
