--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -60,7 +60,7 @@ main {
                     display: flex;
                     flex-direction: column;
                     align-items: center;
-                    justify-content: center;
+
                     margin-left: 20px;
                     height: max-content;
 
@@ -71,6 +71,10 @@ main {
                     p {
                         column-count: 2;
                         font-family: $texto_secundario;
+
+                        span {
+                            display: none;
+                        }
                     }
 
                     input {
@@ -145,6 +149,7 @@ main {
 
             .categoria__img {
                 height: 480px;
+
                 .categoria__img__img {
                     margin-bottom: 10px;
 
@@ -159,34 +164,39 @@ main {
 
                         }
                     }
-                    
+
                 }
-                h4{
-                        font-family: $texto_principal;
-                        letter-spacing: 5px;
-                        font-size: 25px;
-                        margin: 10px 15px;
-                        color: black;
-                    }
+
+                h4 {
+                    font-family: $texto_principal;
+                    letter-spacing: 5px;
+                    font-size: 25px;
+                    margin: 10px 15px;
+                    color: black;
+                }
             }
 
         }
     }
-    .formulario{
+
+    .formulario {
         border-top: 1px solid;
         border-bottom: 1px solid;
         margin: 45px;
         height: 150px;
-        p{
+
+        p {
             font-family: $texto_secundario;
             font-size: 32px;
             margin: 15px;
             text-align: center;
         }
-        .formulario__form{
+
+        .formulario__form {
             text-align: center;
             margin: 0 auto;
-            .formulario__form__email{
+
+            .formulario__form__email {
                 width: 450px;
                 height: 35px;
                 padding-left: 20px;
@@ -194,7 +204,8 @@ main {
                 outline: none;
                 border-radius: 5px;
             }
-            .formulario__form__suscripcion{
+
+            .formulario__form__suscripcion {
                 width: 150px;
                 height: 35px;
                 border: none;
@@ -203,7 +214,8 @@ main {
                 color: whitesmoke;
                 border-radius: 5px;
                 padding: 5px;
-                &:hover{
+
+                &:hover {
                     background-color: $fondo;
                     border: 1px solid;
                 }
@@ -211,74 +223,206 @@ main {
         }
     }
 }
-footer{
+
+footer {
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 250px;
-    background-color:  black;
+    background-color: black;
     color: whitesmoke;
-    h3{
-        font-family:$texto_principal;
+
+    h3 {
+        font-family: $texto_principal;
         letter-spacing: 3.5px;
         font-size: 14px;
         text-align: center;
     }
-    a{
+
+    a {
         color: whitesmoke;
         text-decoration: none;
     }
-    .footer__links{
+
+    .footer__links {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         width: 200px;
-        a{
+
+        a {
             width: max-content;
-            font-family:$texto_secundario;
+            font-family: $texto_secundario;
             margin: 5px;
             border-bottom: 1px solid transparent;
             font-size: 10px;
-            &:hover{
+
+            &:hover {
                 border-bottom: 1px solid whitesmoke;
             }
         }
     }
-    .footer__redes{
+
+    .footer__redes {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width:400px;
-        p{
+        width: 400px;
+
+        p {
             font-family: $texto_secundario;
             padding: 5px 20px;
             font-size: 12px;
         }
-        .redes a{
+
+        .redes a {
             font-size: 18px;
             margin-right: 10px;
-            &:hover{
-                color: black
+
+            &:hover {
+                color: $fondo;
             }
         }
     }
-    .footer__info{
+
+    .footer__info {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         width: 550px;
         font-size: 12px;
         font-family: $texto_secundario;
-        h3{
+
+        h3 {
             text-align: left;
             padding-left: 70px;
         }
-        .info-contacto{
+
+        .info-contacto {
             display: flex;
             justify-content: space-around;
             align-items: center;
         }
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    main {
+        .section__noticias {
+            h1 {
+                line-height: 90px;
+            }
+
+            h2 {
+                margin-top: 30px;
+            }
+
+            .section__div__noticias {
+                height: max-content;
+
+                .noticia {
+                    width: 90%;
+
+                    .noticia__text {
+                        width: 900px;
+
+                        .parrafo {
+                            margin-top: 20px;
+                            font-size: 14px;
+
+                            span {
+                                display: none;
+                            }
+                        }
+
+                        input {
+                            margin-top: 10px;
+
+                        }
+
+                    }
+                }
+
+            }
+
+        }
+
+        .proximos_encuentro img {
+            width: 100%;
+            height: 600px;
+        }
+
+        .section__categoria {
+            .contenedor__categoria {
+                grid-template-columns: repeat(3, 300px);
+                gap: 0;
+                width: 95%;
+
+                .categoria__img {
+                    height: 380px;
+
+                    .categoria__img__img {
+
+                        img {
+                            width: 300px;
+                            height: 300px;
+
+                        }
+                    }
+
+                }
+
+                h4 {
+                    font-size: 20px;
+                }
+            }
+
+
+        }
+    }
+
+}
+
+@media screen and (max-width: 1024px) {
+    iframe {
+        width: 200px;
+    }
+}
+
+@media screen and (max-width:992px) {
+    main {
+        .section__noticias {
+            .section__div__noticias {
+
+                .noticia {
+                    height: max-content;
+                    margin-bottom: 10px;
+                    
+                    .noticia__text {
+
+                        .parrafo {
+                            column-count: 2;
+                            font-size: 12px;
+
+                            span {
+                                display: none;
+                            }
+                        }
+
+                        input {
+                            margin-top: 5px;                     
+                        }
+                    }
+                }
+
+            }
+        }
+        .proximos_encuentro img {
+            width: 100%;
+            height: 450px;
+        }
+
     }
 }
