--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -297,7 +297,6 @@ footer {
 
         h3 {
             text-align: left;
-            padding-left: 70px;
         }
 
         .info-contacto {
@@ -386,9 +385,21 @@ footer {
 }
 
 @media screen and (max-width: 1024px) {
-    iframe {
-        width: 200px;
+    main {
+        .proximos_encuentro img {
+            width: 100%;
+            height: 450px;
+        }
+
     }
+
+    .footer {
+        iframe {
+            width: 200px;
+        }
+
+    }
+
 }
 
 @media screen and (max-width:992px) {
@@ -399,7 +410,7 @@ footer {
                 .noticia {
                     height: max-content;
                     margin-bottom: 10px;
-                    
+
                     .noticia__text {
 
                         .parrafo {
@@ -412,17 +423,333 @@ footer {
                         }
 
                         input {
-                            margin-top: 5px;                     
+                            margin-top: 5px;
                         }
                     }
                 }
 
             }
         }
+
         .proximos_encuentro img {
             width: 100%;
             height: 450px;
         }
 
+    }
+}
+
+@media screen and (max-width: 770px) {
+    main {
+        .section__promocion {
+            display: none;
+        }
+
+        .galeria-responsive {
+            display: block;
+
+            img {
+                height: 400px;
+            }
+        }
+
+        .section__noticias {
+            h1 {
+                font-size: 20px;
+                line-height: 70px;
+
+                .importante {
+                    font-size: 25px;
+                }
+            }
+
+            h2 {
+                margin-top: 20px;
+                font-size: 35px;
+            }
+
+            .section__div__noticias {
+                margin: 0 auto;
+
+                .noticia {
+                    flex-direction: column;
+
+                    .messi img {
+                        display: none;
+                    }
+
+                    .img_responsive {
+                        display: block;
+                        width: 400px;
+                        margin-bottom: 15px;
+
+                        img {
+                            width: 100%
+                        }
+                    }
+
+                    .noticia__text {
+                        width: 100%;
+
+                        h3 {
+                            font-family: $texto_principal;
+                        }
+
+                        .parrafo {
+                            column-count: 1;
+                            width: 500px;
+
+                        }
+
+                        input {
+                            margin-top: 5px;
+                            margin-bottom: 10px;
+
+                        }
+                    }
+                }
+
+                .dibu_martinez {
+                    background-color: $fondo;
+                    padding-top: 20px;
+
+                    .noticia {
+                        flex-direction: column-reverse;
+
+                        .noticia__text {
+                            color: whitesmoke;
+
+                            h3 {
+                                width: 500px;
+                            }
+                        }
+
+                    }
+
+                    .dibu img {
+                        display: none;
+                    }
+
+                }
+            }
+        }
+
+        .proximos_encuentro img {
+            width: 100%;
+            height: 400px;
+        }
+
+        .section__categoria {
+
+            .contenedor__categoria {
+                grid-template-columns: repeat(1, 400px);
+                justify-content: center;
+
+                .categoria__img {
+                    justify-self: center;
+                    height: 440px;
+
+                    .categoria__img__img {
+                        margin-bottom: 10px;
+
+                        img {
+                            width: 400px;
+                            height: 360px;
+                        }
+                    }
+                }
+
+            }
+        }
+
+        .formulario {
+            height: 100px;
+
+            p {
+                font-size: 20px;
+            }
+
+            .formulario__form {
+
+                .formulario__form__email {
+                    width: 250px;
+                    height: 25px;
+                }
+
+                .formulario__form__suscripcion {
+                    width: 100px;
+                    font-size: 15px;
+                    padding: 3px;
+                }
+            }
+        }
+    }
+
+    footer {
+        flex-direction: column-reverse;
+        align-items: center;
+        height: max-content;
+
+        h3 {
+            font-size: 20px;
+        }
+
+        .footer__links {
+            width: 100%;
+            padding: 30px;
+        }
+
+        .footer__redes {
+            width: 100%;
+            border-bottom: 1px solid gray;
+            padding: 30px;
+
+            p {
+                font-size: 15px;
+            }
+
+        }
+
+        .footer__info {
+            width: 100%;
+            border-bottom: 1px solid gray;
+            padding: 30px;
+
+
+            .info-contacto {
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+
+                 h3 {
+                        text-align: center;
+                    }
+                .map{
+                    iframe{
+                        width: 300px;
+                    }
+                }
+
+
+            }
+        }
+    }
+
+}
+@media screen and (max-width: 600px){
+    main{
+        .galeria-responsive {
+            display: block;
+
+            img {
+                height: 300px;
+            }
+        }
+        .section__noticias {
+            h1 {
+                font-size: 15px;
+                line-height: 50px;
+
+                .importante {
+                    font-size: 20px;
+                }
+            }
+
+            h2 {
+                margin-top: 20px;
+                font-size: 25px;
+            }
+
+            .section__div__noticias {
+
+                .noticia {         
+
+                    .img_responsive {
+                        display: block;
+                        width: 400px;
+                        margin-top: 20px;
+                        margin-bottom: 15px;
+
+                        img {
+                            width: 100%
+                        }
+                    }
+
+                    .noticia__text {
+
+                        h3 {
+                            font-size: 20px;
+                        }
+
+
+                        input {
+                            width: max-content;
+                            height: max-content;
+                            padding: 5px;
+                            font-size: 10px;
+
+                        }
+                    }
+                }
+
+                
+            }
+        }
+        .proximos_encuentro img {
+            width: 100%;
+            height: 300px;
+        }
+        .formulario {
+            height: 90px;
+
+            p {
+                font-size: 15px;
+            }
+
+            .formulario__form {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                .formulario__form__email {
+                    width: 250px;
+                    height: 25px;
+                }
+
+                .formulario__form__suscripcion {
+                    width: max-content;
+                    height: max-content;
+                    font-size: 10px;
+                    padding: 3px;
+                }
+            }
+        }
+    }
+    footer {
+
+        h3 {
+            
+            font-size: $quince;
+        }
+
+        .footer__redes {
+
+            p {
+                font-size: 12px;
+            }
+
+        }
+
+        .footer__info {
+            .info-contacto {
+                .map{
+                    iframe{
+                        width: 200px;
+                    }
+                }
+
+
+            }
+        }
     }
 }
