--- a/scss/_plantel.scss
+++ b/scss/_plantel.scss
@@ -1,39 +1,113 @@
 @import "var";
 
-main{
-    .cards-plantel{
+main {
+    .cards-plantel {
         background-color: $fondo;
-        h1{
+
+        h1 {
             text-align: center;
             font-family: $texto_principal;
             color: whitesmoke;
             padding: 40px;
         }
-        h2{
+
+        h2 {
             margin-left: 40px;
             color: whitesmoke;
             font-family: $texto_secundario;
         }
-        .contenedor_card{
+
+        .contenedor_card {
             @extend .contenedor_card;
-            .card-body_miestilo{
-                padding: 5px;
-                .mi_tilte{
-                    font-family: $texto_principal;
-                    letter-spacing: 1.5px;
-                    margin: 0;
+            display: grid;
+            justify-content: space-around;
+            grid-template-columns: repeat(3, 300px);
+            grid-template-rows: auto;
+
+            .card_miEstilo {
+                margin-bottom: 20px;
+
+
+                img {
+                    height: 500px;
                 }
-                p{
-                    font-family: $texto_secundario;
-                    font-size: 14px;
-                    margin: 0;
-                     span{
-                    font-weight: bold;
+
+                .card-body_miestilo {
+                    padding: 5px;
+
+                    .mi_tilte {
+                        font-family: $texto_principal;
+                        letter-spacing: 1.5px;
+                        margin: 0;
+                    }
+
+                    p {
+                        font-family: $texto_secundario;
+                        font-size: 14px;
+                        margin: 0;
+
+                        span {
+                            font-weight: bold;
+                        }
+                    }
+
                 }
+            }
+
+        }
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    main {
+        .cards-plantel {
+            h2 {
+                margin-left: 10px ;
+                font-size: 20px;
+            }
+            .contenedor_card {
+                grid-template-columns: repeat(3, 200px);
+                .card_miEstilo {
+                    margin-bottom: 20px;
+    
+    
+                    img {
+                        height: 300px;
+                    }
+    
+                    
                 }
-               
+    
             }
         }
+    }
+}
 
+@media screen and (max-width: 600px){
+    main {
+        .cards-plantel {
+            .contenedor_card {
+                grid-template-columns: repeat(2, 150px);
+                .card_miEstilo {
+                    margin-bottom: 20px;
+                        .card-body_miestilo{
+                            .mi_tilte{
+                                font-size: $quince;
+                            }
+                            .mi_text{
+                                font-size: $doce;
+                            }
+                        }
+    
+    
+                    img {
+                        height: 250px;
+                    }
+    
+                    
+                }
+    
+            }
+        }
     }
 }
